--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -1,10 +1,10 @@
 <div class="nav-container">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <p class="navbar-text"><%= @merchant.name %></p>
+    <p class="navbar-text"><%= @bulk_discounts.first.merchant.name %></p>
     <ul class="nav navbar-nav">
       <li><%= link_to 'Dashboard', merchant_dashboard_index_path, style: 'pull-right' %>
-      <%= link_to 'My Items', merchant_items_path(@merchant), style: 'pull-right' %>
-      <%= link_to 'My Invoices', merchant_invoices_path(@merchant), style: 'pull-right' %></li>
+      <%= link_to 'My Items', merchant_items_path(@bulk_discounts.first.merchant), style: 'pull-right' %>
+      <%= link_to 'My Invoices', merchant_invoices_path(@bulk_discounts.first.merchant), style: 'pull-right' %></li>
     </ul>
   </nav>
 </div>
@@ -15,9 +15,18 @@
   </div>
 
   <% @bulk_discounts.each do |discount| %>
-    <li><%= link_to "Bulk Discount ##{discount.id}", merchant_bulk_discount_path(@merchant, discount) %>
+    <li><%= link_to "Bulk Discount ##{discount.id}", merchant_bulk_discount_path(@bulk_discounts.first.merchant, discount) %>
     <li>Percent Discount: <%= discount.percent_discount %>
     <li>Quantity Threshold: <%= discount.quantity_threshold %>
   <% end %>
+
+  <div class="row">
+    <p class='col-12'>Upcoming Holidays</p>
+  </div>
+  <div id="upcoming-holidays">
+    <% @facade.holidays.each do |holiday| %>
+      <p><%= holiday.name %>, <%= holiday.date %></p>
+    <% end %>
+  </div>
 
 </body>
