--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -14,6 +14,9 @@
     <p class='col-12'>My Bulk Discounts</p>
   </div>
 
+  <p><%= link_to "Create Bulk Discount", new_merchant_bulk_discount_path(@bulk_discounts.first.merchant.id) %></p>
+
+
   <% @bulk_discounts.each do |discount| %>
     <li><%= link_to "Bulk Discount ##{discount.id}", merchant_bulk_discount_path(@bulk_discounts.first.merchant, discount) %>
     <li>Percent Discount: <%= discount.percent_discount %>
