Finish us3, create new bulk discount

--- a/app/views/bulk_discounts/_form.html.erb
+++ b/app/views/bulk_discounts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: model, method: method, url: url, class: 'merchant_item_form', local: true do |f| %>
+<%= form_with model: model, method: method, url: url, class: 'merchant_bulk_discount_form', local: true do |f| %>
   <%= f.label :percent_discount %>
   <%= f.number_field :percent_discount, step: :any %><br/><br/>
   <%= f.label :quantity_threshold %>
