Finish us8, link invoice index to bulk discount show

--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -49,6 +49,9 @@
                                             <%= f.select :status, Invoice.statuses.keys, selected: "#{@invoice.status}" %>
                                             <%= f.submit 'Update Invoice' %>
                                           <% end %></td><br/>
+            <td><% if i.applied_discount != nil %>
+                  <%= link_to "Discount #{i.applied_discount.id}", merchant_bulk_discount_path(@merchant, i.applied_discount) %></td>
+                <% end %></td>
           </tr>
         </section>
       <% end %>
