--- a/app/views/bulk_discounts/edit.html.erb
+++ b/app/views/bulk_discounts/edit.html.erb
@@ -9,4 +9,4 @@
 </nav>
 </div>
 
-<%= render partial: 'form', locals: { method: :patch, url: merchant_bulk_discount_path(@merchant, @bulk_discount), class: 'merchant_bulk_discount_form', local: true, model: @bulk_discount } %>
+<%= render partial: 'form', locals: { method: :patch, url: merchant_bulk_discount_path(@merchant), class: 'merchant_bulk_discount_form', local: true, model: @bulk_discount } %>
