--- a/app/views/bulk_discounts/new.html.erb
+++ b/app/views/bulk_discounts/new.html.erb
@@ -9,4 +9,4 @@
 </nav>
 </div>
 
-<%= render partial: 'form', locals: { method: :post, url: merchant_bulk_discounts_path(@merchant, @bulk_discount), class: 'merchant_bulk_discount_form', local: true, model: nil } %>
+<%= render partial: 'form', locals: { method: :post, url: merchant_bulk_discounts_path(@merchant), class: 'merchant_bulk_discount_form', local: true, model: nil } %>
