--- a/app/views/bulk_discounts/edit.html.erb
+++ b/app/views/bulk_discounts/edit.html.erb
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <p class="navbar-text"><%= @merchant.name %></p>
+  <p class="navbar-text"><%= @bulk_discount.merchant.name %></p>
   <ul class="nav navbar-nav">
     <li><%= link_to 'Dashboard', merchant_dashboard_index_path, style: 'pull-right' %>
-    <%= link_to 'My Items', merchant_items_path(@merchant), style: 'pull-right' %>
-    <%= link_to 'My Invoices', merchant_invoices_path(@merchant), style: 'pull-right' %></li>
+    <%= link_to 'My Items', merchant_items_path(@bulk_discount.merchant), style: 'pull-right' %>
+    <%= link_to 'My Invoices', merchant_invoices_path(@bulk_discount.merchant), style: 'pull-right' %></li>
     <li><%= link_to 'Bulk Discounts', merchant_bulk_discounts_path, class: 'link_1', style: 'pull-right' %>
   </ul>
 </nav>
 </div>
 
-<%= render partial: 'form', locals: { method: :patch, url: merchant_bulk_discount_path(@merchant), class: 'merchant_bulk_discount_form', local: true, model: @bulk_discount } %>
+<%= render partial: 'form', locals: { method: :patch, url: merchant_bulk_discount_path(@bulk_discount.merchant), class: 'merchant_bulk_discount_form', local: true, model: @bulk_discount } %>
